# ghc2017

./: .gitignore
practice/: CMakeLists.txt  candidate.cc  candidate.h  fenwick.h  greedy-solver.cc  io.cc  io.h  problem.cc  problem.h  run-all-tests  solver.cc
qual/: CMakeLists.txt  problem.cc  problem.h  run-all-tests  solution.cc  solution.h  solver-y.cc  solver.cc  solver_m.cc  utils.cc  utils.h
